[#noissue] Modularization